--- a/docker-compose/docker_quickstart.py.example
+++ b/docker-compose/docker_quickstart.py.example
@@ -1,4 +1,5 @@
 from instapy import InstaPy
+from instapy.util import smart_run
 
 # Write your automation here
 # Stuck ? Look at the github page or the examples in the examples folder
