Using official instapy dockerhub image

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 # Ignore InstaPy directory
 docker-compose/InstaPy
+InstaPy
 
 # Ignore docker_quickstart.py
 docker-compose/docker_quickstart.py
+docker_quickstart.py
