Using instapy dockerhub image (#31)
* Using official instapy dockerhub image

* Official instapy dockerhub image

--- a/docker-compose/docker-compose.yml
+++ b/docker-compose/docker-compose.yml
@@ -1,13 +1,11 @@
 version: '3'
 services:
   web:
+    image: instapy/instapy:latest
     container_name: "${COMPOSE_PROJECT_NAME}_web"
     env_file: .env
     environment:
       - PYTHONUNBUFFERED=0
       - INSTAPY_WORKSPACE=/code/InstaPy
-    build:
-      context: .
-      dockerfile: ./build/Dockerfile
     volumes:
       - ./:/code
