InstaPy 0.6.1 + FF Webdriver

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,7 @@ InstaPy
 # Ignore docker_quickstart.py
 docker-compose/docker_quickstart.py
 docker_quickstart.py
+
+# Geckodriver log file
+geckodriver.log
+docker-compose/geckodriver.log
