[+] Building from alpine version

--- a/docker-compose/docker-compose.build.yml
+++ b/docker-compose/docker-compose.build.yml
@@ -2,5 +2,5 @@ version: '3'
 services:
   web:
     build:
-      dockerfile: ./build/Dockerfile
+      dockerfile: ./build/alpine.Dockerfile
       context: .
