Subject: Dockerfile update Problem: xpath_compile.py is outdated if InstaPy main repo is changed Solution: Remove xpath_compile.py dependency Note:
Signed-off-by: elulcao <elulcao@icloud.com>

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,13 @@ docker_quickstart.py
 # Geckodriver log file
 geckodriver.log
 docker-compose/geckodriver.log
+
+# virtualenv
+venv/
+ENV/
+
+# Editors
+.idea
+.vscode
+*.code-workspace
+.bak
