Subject: Updated CHANGELOG and gitignore. Removed unused Dockerfile for docker-compose Problem: NA Solution: NA Note: NA
Signed-off-by: elulcao <elulcao@icloud.com>

--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@ docker-compose/InstaPy
 InstaPy
 
 # Ignore docker_quickstart.py
-docker-compose/docker_quickstart.py
+**/docker_quickstart.py
 docker_quickstart.py
 
 # Geckodriver log file
