--- a/Dockerfile.armhf
+++ b/Dockerfile.armhf
@@ -36,5 +36,6 @@ RUN sed -i "s#deb http://deb.debian.org/debian buster main#deb http://deb.debian
   && apt-get clean \
   && rm -rf /var/lib/apt/lists/* /tmp/requirements.txt \
   # Disabling geckodriver log file
-  && sed -i "s#browser = webdriver.Firefox(#browser = webdriver.Firefox(service_log_path=os.devnull,#g" /usr/local/lib/python3.7/site-packages/instapy/browser.py \
+  && sed -i "s#browser = webdriver.Firefox(#browser = webdriver.Firefox(service_log_path=os.devnull,#g" /usr/local/lib/python3.7/site-packages/instapy/browser.py
+COPY *.py  /code/
 CMD ["python", "docker_quickstart.py"]
